# Wuthering_Waves_Private_Server

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  tgbot
.github/ISSUE_TEMPLATE/: bug--.md  bug_report.md
.github/workflows/: create_release.yml  rust-build.yml
fodder/: wwps-box.json
rust/tgbot/: Cargo.toml
rust/tgbot/examples/: test_sni.rs
rust/tgbot/src/: main.rs
rust/tgbot/src/logic/: cmd_async.rs  config.rs  fail2ban.rs  firewall.rs  firewall_scanner.rs  firewalld.rs  geoip.rs  installer.rs  maintenance.rs  mod.rs  operations.rs  security.rs  sni_selector.rs  system.rs  totp.rs  ufw.rs  upgrade.rs  utils.rs  warp_api.rs
rust/tgbot/src/logic/scheduler/: mod.rs  task_types.rs
rust/tgbot/src/resources/sni/reality/: AE.txt  AM.txt  AR.txt  AT.txt  AU.txt  AZ.txt  BD.txt  BE.txt  BG.txt  BO.txt  BR.txt  BW.txt  BY.txt  BZ.txt  CA.txt  CH.txt  CL.txt  CO.txt  CV.txt  CY.txt  CZ.txt  DE.txt  DK.txt  DM.txt  DZ.txt  EC.txt  EE.txt  EG.txt  ES.txt  ET.txt  FI.txt  FR.txt  GB.txt  GE.txt  GH.txt  GI.txt  GR.txt  HN.txt  HR.txt  HU.txt  (+57 more)
rust/tgbot/src/resources/sni/xhttp/: AE.txt  AM.txt  AR.txt  AT.txt  AU.txt  BA.txt  BD.txt  BE.txt  BG.txt  BH.txt  BR.txt  BY.txt  BZ.txt  CA.txt  CH.txt  CL.txt  CO.txt  CY.txt  CZ.txt  DE.txt  DK.txt  DM.txt  EC.txt  EE.txt  ES.txt  FI.txt  FR.txt  GB.txt  GE.txt  GI.txt  GR.txt  HR.txt  HU.txt  ID.txt  IE.txt  IL.txt  IM.txt  IN.txt  IS.txt  IT.txt  (+42 more)
shell/: empty_login_history.sh  init_tls.sh  install_en.sh  send_email.sh  ufw_remove.sh
sni_tester/: README.md  go.mod  go.sum  main.go
(+17 files in other folders)
